# zonk

./: .gitignore  CMakeLists.txt  regularity.txt
src/client.console/: main  main.c  presenter.c  presenter.h
src/core/: dice.c  dice.h  score.c  score.h  score_evaluation.c  score_evaluation.h  shared.h  state.c  state.h  zonk.h
